--- a/frontend/accotrac/src/App.css
+++ b/frontend/accotrac/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -7,6 +8,10 @@
   pointer-events: none;
 }
 
+#noMargin {
+  padding: 0;
+  overflow-x: hidden;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
