added features,forgot_password,new_password,changed img and others

--- a/frontend/accotrac/public/assets/css/style.css
+++ b/frontend/accotrac/public/assets/css/style.css
@@ -304,7 +304,7 @@ body {
       margin-left: 5px; }
 
 .box-de {
-  background-image: url(../images/favo.jpg);
+  background-image: url(../images/fave.png);
   background-size: 100%;
   padding: 0px;
   border-top-right-radius: 20px;
