--- a/frontend/accotrac/public/assets/css/style.css
+++ b/frontend/accotrac/public/assets/css/style.css
@@ -4,7 +4,7 @@
 @font-face {
   font-family: 'mouse-500';
   src: url("../fonts/RobotoSlab-Bold.ttf") format("truetype"); }
-/* ===================================== Basic CSS ================================== */
+
 * {
   margin: 0px;
   padding: 0px;
@@ -875,8 +875,9 @@ body {
 
 .slid-container {
   background-image: url("../images/bg.jpg");
-  background-size: contain;
+  background-size: cover;
   height: 580px;
+  background-repeat: no-repeat;
 }
 @media screen and (max-width: 767px) {
   .slid-container {
@@ -895,15 +896,19 @@ color: #007bff;
 }
 
 .slid-container .inner-lay {
-  position: absolute;
+  background-position:absolute;
+  background-repeat:end;
   width: 100%;
   height: 100%;
-  background-color: rgba(7, 98, 196, 0.884);
+  background-color: rgba(19, 104, 196, 0.849);
   height: 580px;
 }
+
 @media screen and (max-width: 767px) {
   .slid-container .inner-lay {
     height: auto;
+    background-size: cover;
+    object-fit: cover;  
     position: relative;
   }
 }
